# new_libft

./: .gitignore  CMakeLists.txt  Makefile  README.md  author
inc/: libft.h
src/: ft_abs.c  ft_add_dig_to_int.c  ft_add_float_to_str.c  ft_add_specials.c  ft_atoi.c  ft_b.c  ft_buff_finded_percent.c  ft_buff_free.c  ft_buff_no_percent.c  ft_buff_print_free.c  ft_buff_print_n_len.c  ft_buff_treated_percent.c  ft_bzero.c  ft_bzero_buf_n_set_pointers.c  ft_c.c  ft_choose_func.c  ft_count_float.c  ft_di.c  ft_dollar_arg.c  ft_dollar_treat.c  ft_error_exit.c  ft_exeption_treat.c  ft_f.c  ft_final_print_n_free_rt_len.c  ft_find_digit.c  ft_find_in_def.c  ft_free_tdarr.c  ft_free_two_dem_str.c  ft_get_divisional.c  ft_get_integer.c  ft_get_next_line.c  ft_i64toa_base.c  ft_integer_to_str.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isbigger.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  (+77 more)
