cmake_minimum_required(VERSION 3.15)
project(libft C)

set(CMAKE_C_STANDARD 90)

set(SOURCE_LIB
        inc/libft.h
        src/ft_atoi.c
        src/ft_bzero.c
        src/ft_free_tdarr.c
        src/ft_get_next_line.c
        src/ft_isalnum.c
        src/ft_isalpha.c
        src/ft_isascii.c
        src/ft_isdigit.c
        src/ft_isprint.c
        src/ft_itoa.c
        src/ft_list_clear.c
        src/ft_list_size.c
        src/ft_lstadd.c
        src/ft_lstaddend.c
        src/ft_lstdel.c
        src/ft_lstdelone.c
        src/ft_lstiter.c
        src/ft_lstmap.c
        src/ft_lstnew.c
        src/ft_memalloc.c
        src/ft_memccpy.c
        src/ft_memchr.c
        src/ft_memcmp.c
        src/ft_memcpy.c
        src/ft_memdel.c
        src/ft_memmove.c
        src/ft_memset.c
        src/ft_node_del.c
        src/ft_putchar.c
        src/ft_putchar_fd.c
        src/ft_putendl.c
        src/ft_putendl_fd.c
        src/ft_putnbr.c
        src/ft_putnbr_fd.c
        src/ft_putstr.c
        src/ft_putstr_fd.c
        src/ft_strcat.c
        src/ft_strchr.c
        src/ft_strclr.c
        src/ft_strcmp.c
        src/ft_strcpy.c
        src/ft_strdel.c
        src/ft_strdup.c
        src/ft_strequ.c
        src/ft_striter.c
        src/ft_striteri.c
        src/ft_strjoin.c
        src/ft_strlcat.c
        src/ft_strlen.c
        src/ft_strmap.c
        src/ft_strmapi.c
        src/ft_strncat.c
        src/ft_strncmp.c
        src/ft_strncpy.c
        src/ft_strnequ.c
        src/ft_strnew.c
        src/ft_strnstr.c
        src/ft_strrchr.c
        src/ft_strsepcut.c
        src/ft_strsplit.c
        src/ft_strstr.c
        src/ft_strsub.c
        src/ft_strtrim.c
        src/ft_tolower.c
        src/ft_toupper.c
        src/ft_word_count.c
        src/ft_free_two_dem_str.c
        src/ft_str_is_int.c
        src/ft_abs.c
        src/ft_add_dig_to_int.c
        src/ft_add_specials.c
        src/ft_b.c
        src/ft_buff_finded_percent.c
        src/ft_buff_free.c
        src/ft_buff_no_percent.c
        src/ft_buff_print_free.c
        src/ft_buff_print_n_len.c
        src/ft_buff_treated_percent.c
        src/ft_bzero_buf_n_set_pointers.c
        src/ft_c.c
        src/ft_choose_func.c
        src/ft_count_float.c
        src/ft_di.c
        src/ft_dollar_arg.c
        src/ft_dollar_treat.c
        src/ft_error_exit.c
        src/ft_exeption_treat.c
        src/ft_f.c
        src/ft_final_print_n_free_rt_len.c
        src/ft_find_digit.c
        src/ft_find_in_def.c
        src/ft_get_divisional.c
        src/ft_get_integer.c
        src/ft_i64toa_base.c
        src/ft_integer_to_str.c
        src/ft_isbigger.c
        src/ft_num_to_str.c
        src/ft_o.c
        src/ft_p.c
        src/ft_parse_flags.c
        src/ft_parse_spec.c
        src/ft_parsing.c
        src/ft_percent_treat.c
        src/ft_precision_treat.c
        src/ft_printf.c
        src/ft_round_float.c
        src/ft_s.c
        src/ft_strcpy_dptp.c
        src/ft_strpcpy.c
        src/ft_to_pow.c
        src/ft_u.c
        src/ft_u64toa_base.c
        src/ft_width_n_precision.c
        src/ft_width_treat.c
        src/ft_add_float_to_str.c
        src/ft_x.c
        src/ft_put_div_by_one.c)

include_directories(inc)

add_library(libft STATIC ${SOURCE_LIB})